<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:background="@android:color/holo_blue_bright">

            <TextView
                android:id="@+id/tv_d_add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_con"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toTopOf="@id/v_d_add_01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_d_add_01"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_1"
                android:layout_marginStart="@dimen/dp_21"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_21"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_dia_agreement_hint"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_21"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/con_agreement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_d_add_01" />

            <TextView
                android:id="@+id/tv_dia_agreement"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/con_agreement_smb"
                app:layout_constraintBottom_toBottomOf="@id/tv_dia_agreement_hint"
                app:layout_constraintStart_toEndOf="@id/tv_dia_agreement_hint"
                app:layout_constraintTop_toTopOf="@id/tv_dia_agreement_hint" />

            <TextView
                android:id="@+id/tv_dia_ip_hint"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_17"
                android:text="@string/con_ip_text"
                app:layout_constraintBottom_toBottomOf="@id/til_dia_ip"
                app:layout_constraintStart_toStartOf="@id/tv_dia_agreement_hint"
                app:layout_constraintTop_toTopOf="@id/til_dia_ip" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dia_ip"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_80"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_21"
                android:hint="@string/con_ip_text_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/tv_dia_user_hint"
                app:layout_constraintTop_toBottomOf="@id/tv_dia_agreement">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dia_ip"
                    style="@style/textModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789." />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_dia_user_hint"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_17"
                android:text="@string/con_user_text"
                app:layout_constraintBottom_toBottomOf="@id/til_dia_user"
                app:layout_constraintStart_toStartOf="@id/tv_dia_agreement_hint"
                app:layout_constraintTop_toTopOf="@id/til_dia_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dia_user"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_80"
                android:layout_marginEnd="@dimen/dp_21"
                android:hint="@string/con_user_text_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/tv_dia_user_hint"
                app:layout_constraintTop_toBottomOf="@id/til_dia_ip">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dia_user"
                    style="@style/textModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_dia_paw_hint"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_17"
                android:text="@string/con_paw_text"
                app:layout_constraintBottom_toBottomOf="@id/til_dia_paw"
                app:layout_constraintStart_toStartOf="@id/tv_dia_agreement_hint"
                app:layout_constraintTop_toTopOf="@id/til_dia_paw" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dia_paw"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_80"
                android:layout_marginEnd="@dimen/dp_21"
                android:hint="@string/con_paw_text_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/tv_dia_user_hint"
                app:layout_constraintTop_toBottomOf="@id/til_dia_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dia_paw"
                    style="@style/textModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_dia_path_hint"
                style="@style/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_17"
                android:text="@string/con_path_text"
                app:layout_constraintBottom_toBottomOf="@id/til_dia_path"
                app:layout_constraintStart_toStartOf="@id/tv_dia_agreement_hint"
                app:layout_constraintTop_toTopOf="@id/til_dia_path" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_dia_path"
                style="@style/Widget.Shrine.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_80"
                android:layout_marginEnd="@dimen/dp_21"
                android:hint="@string/con_path_text_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_dia_user_hint"
                app:layout_constraintTop_toBottomOf="@id/til_dia_paw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_dia_path"
                    style="@style/textModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/v_d_add_02"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_dia_path" />

            <View
                android:id="@+id/v_d_add_03"
                android:layout_width="@dimen/dp_0_1"
                android:layout_height="@dimen/dp_50"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_d_add_02" />

            <TextView
                android:id="@+id/tv_dia_certain"
                style="@style/textModel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/ic_add_vfs_certain"
                android:gravity="center"
                android:text="@string/con_certain"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/v_d_add_03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_d_add_02" />

            <TextView
                android:id="@+id/tv_dia_cancel"
                style="@style/textModel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/ic_add_vfs_cancel"
                android:gravity="center"
                android:text="@string/con_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/v_d_add_03"
                app:layout_constraintTop_toBottomOf="@id/v_d_add_02" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>