<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/choose_folder"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toTopOf="@id/v_dia_folder_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="选择文件夹" />

        <View
            android:id="@+id/v_dia_folder_01"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_0_1"
            android:layout_marginStart="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_21"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dia_folder_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center|start"
            android:text="@string/choose_folder_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_dia_folder_01"
            tools:text="新建文件夹" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_dia_folder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_300"
            android:layout_marginStart="@dimen/dp_21"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_21"
            android:layout_marginBottom="@dimen/dp_8"
            app:layout_constraintTop_toBottomOf="@id/tv_dia_folder_name"
            tools:itemCount="5"
            tools:listitem="@layout/item_dialog_folder_list" />

        <View
            android:id="@+id/v_dia_folder_02"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_0_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rc_dia_folder" />

        <View
            android:id="@+id/v_dia_folder_03"
            android:layout_width="@dimen/dp_0_1"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_dia_folder_02" />

        <TextView
            android:id="@+id/tv_dia_folder_certain"
            style="@style/textModel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_add_vfs_certain"
            android:gravity="center"
            android:text="@string/con_certain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/v_dia_folder_03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_dia_folder_02" />

        <TextView
            android:id="@+id/tv_dia_folder_cancel"
            style="@style/textModel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_add_vfs_cancel"
            android:gravity="center"
            android:text="@string/con_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/v_dia_folder_03"
            app:layout_constraintTop_toBottomOf="@id/v_dia_folder_02" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>